syntax = "proto3";
package proto;
option go_package = ".;pb";

// Gold
service GoldService {
  rpc Gold(GoldRequest) returns (GoldResponse) {}
}

message GoldRequest {
  string url = 11;

  string authority = 21;
  string origin = 22;
  string referer = 23;

  string secChUa = 31;
  string secChUaPlatform = 32;
  string userAgent = 33;
}

message GoldResponse {
  int64 gold = 1;
}

// Betting
service BettingService {
  rpc Betting(BettingRequest) returns (BettingResponse) {}
}

message BettingRequest {
  string url = 11;

  string authority = 21;
  string origin = 22;
  string referer = 23;

  string secChUa = 31;
  string secChUaPlatform = 32;
  string userAgent = 33;
}

message BettingResponse {
}

